--- a/style_new.css
+++ b/style_new.css
@@ -102,7 +102,9 @@ hr {
   font-family: trade_gothic;
   src: url("//mallmaverick.com/system/site_images/photos/000/003/998/original/TradeGothic-LT-Bold-CondensedNo20.ttf?1410896868");
 }
-
+$primary : #7b4fa2;//d8a101;
+$font_family : arial;
+$main_font_color : #000;
 
 #SearchTerms:focus {
   border-color: #e9322d;
@@ -382,7 +384,7 @@ a {
   color: #000;
   &:hover {
     text-decoration: none;
-    color: #7b4fa2;
+    color: $primary;
   }
 }
 
@@ -791,7 +793,7 @@ body {
 }
 
 .menu-container .router-link-active, .menu_header .router-link-active {
-  color: #7b4fa2 !important;
+  color: $primary !important;
   text-decoration: none;
 }
 
@@ -865,7 +867,7 @@ ul.nav li.dropdown:hover > .dropdown-menu-hover {
     transition: all .3s ease;
     position: relative;
     &:hover {
-      background-color: #7b4fa2;
+      background-color: $primary;
     }
     .fa {
       position: absolute;
@@ -963,13 +965,13 @@ ul.nav li.dropdown:hover > .dropdown-menu-hover {
 #searchResults {
   margin: 30px auto;
   .result_link {
-    color: #7b4fa2;
+    color: $primary;
     &:hover {
       text-decoration: none;
     }
   }
   .search_result_title {
-    color: #7b4fa2;
+    color: $primary;
     text-align: left;
     font-size: 14pt;
   }
@@ -2626,7 +2628,7 @@ ul.nav li.dropdown:hover > .dropdown-menu-hover {
     -o-transition: all 0.3s ease;
     transition: all 0.3s ease;
     &:hover {
-      background: #7b4fa2;
+      background: $primary;
       color: #FFF;
       cursor: pointer;
     }
@@ -2670,7 +2672,7 @@ ul.nav li.dropdown:hover > .dropdown-menu-hover {
 .mapplic-popup-link {
   padding: 6px;
   float: left !important;
-  background-color: #7b4fa2;
+  background-color: $primary;
   font-size: 1rem;
   line-height: 1rem;
   color: #FFF !important;
@@ -2689,7 +2691,7 @@ ul.nav li.dropdown:hover > .dropdown-menu-hover {
   font-style: italic;
   font-size: 1.375em;
   line-height: 1.375em;
-  color: #7b4fa2;
+  color: $primary;
   text-align: left;
 }
 
@@ -2763,7 +2765,7 @@ ul.nav li.dropdown:hover > .dropdown-menu-hover {
     -webkit-transform: translate(-50%, -50%);
     -ms-transform: translate(-50%, -50%);
     transform: translate(-50%, -50%);
-    color: #7b4fa2;
+    color: $primary;
     text-transform: uppercase;
     font-weight: 600;
     -webkit-font-smoothing: antialiased;
@@ -3427,7 +3429,7 @@ ul.nav li.dropdown:hover > .dropdown-menu-hover {
     font-family: inherit;
   }
   a {
-    color: #7b4fa2;
+    color: $primary;
     &:hover {
       color: #000;
     }
@@ -3546,7 +3548,7 @@ ul.nav li.dropdown:hover > .dropdown-menu-hover {
     -o-transition: all 0.3s ease;
     transition: all 0.3s ease;
     &:hover {
-      background-color: #7b4fa2;
+      background-color: $primary;
     }
   }
   .social_icons {
@@ -3944,7 +3946,7 @@ legend {
 }
 
 .page_body.description_text a {
-  color: #7b4fa2;
+  color: $primary;
 }
 
 /***** HOURS *****/
@@ -5052,7 +5054,7 @@ legend {
     left: 0;
     right: 100%;
     bottom: 0;
-    background: #7b4fa2;
+    background: $primary;
     height: 4px;
     -webkit-transition-property: right;
     -o-transition-property: right;
@@ -5087,7 +5089,7 @@ legend {
     left: 51%;
     right: 51%;
     bottom: 0;
-    background: #7b4fa2;
+    background: $primary;
     height: 4px;
     -webkit-transition-property: left, right;
     -o-transition-property: left, right;
@@ -5134,7 +5136,7 @@ legend {
     left: 0;
     right: 0;
     bottom: 0;
-    background: #7b4fa2;
+    background: $primary;
     -webkit-transform: scaleX(0);
     -ms-transform: scaleX(0);
     transform: scaleX(0);
