--- a/style_new.css
+++ b/style_new.css
@@ -131,7 +131,7 @@ html {
 body {
   font-family: $font_family;
   font-size: 12pt;
-  color: #000;
+  color: $main_font_color;
   overflow-x: hidden;
 }
 
@@ -178,14 +178,14 @@ body {
   }
   .vue-simple-spinner-text {
     margin-top: 24px !important;
-    color: #000 !important;
+    color: $main_font_color !important;
     text-transform: uppercase;
   }
 }
 
 img[lazy=loading] {
   max-width: 100%;
-  color: #000;
+  color: $main_font_color;
 }
 
 p, ol, ul, td {
@@ -381,7 +381,7 @@ li {
 }
 
 a {
-  color: #000;
+  color: $main_font_color;
   &:hover {
     text-decoration: none;
     color: $primary;
@@ -454,7 +454,7 @@ body {
         color: #999999;
         &:hover {
           text-decoration: none;
-          color: #000;
+          color: $main_font_color;
         }
       }
       ul .dropdown_item {
@@ -582,7 +582,7 @@ body {
 }
 
 .pop_up_header {
-  color: #000000;
+  color: $main_font_color000;
   text-shadow: 0px 0px 0px rgba(2, 2, 2, 0.23);
   line-height: 36px;
   margin-top: 0;
@@ -627,7 +627,7 @@ body {
 }
 
 .popup_submit {
-  color: #000;
+  color: $main_font_color;
   display: block;
   width: 100%;
   margin-top: 6px;
@@ -638,13 +638,13 @@ body {
 
 .right_header {
   font-size: 22px;
-  color: #000;
+  color: $main_font_color;
   margin-top: 20px;
 }
 
 .right_desc {
   font-size: 16px;
-  color: #000;
+  color: $main_font_color;
   line-height: 20px;
 }
 
@@ -741,20 +741,20 @@ body {
     background: transparent;
     padding: 5px 0;
     display: block;
-    color: #000;
+    color: $main_font_color;
     text-decoration: none;
     text-align: left;
     line-height: inherit;
     padding: 8px 0;
     font-size: 24px;
-    color: #000;
+    color: $main_font_color;
     font-weight: 100;
     font-family: museosans100;
     border-color: transparent;
   }
   button {
     &:hover, &:focus, &:active {
-      color: #000;
+      color: $main_font_color;
       -webkit-box-shadow: none;
       box-shadow: none;
       border: none;
@@ -765,7 +765,7 @@ body {
   }
   a.btn {
     &:hover, &:focus, &:active {
-      color: #000;
+      color: $main_font_color;
       -webkit-box-shadow: none;
       box-shadow: none;
       border: none;
@@ -901,7 +901,7 @@ ul.nav li.dropdown:hover > .dropdown-menu-hover {
   }
   .options-list {
     width: 100%;
-    color: #000;
+    color: $main_font_color;
     margin-left: 0;
     padding-left: 0;
     z-index: 9999999;
@@ -1039,7 +1039,7 @@ ul.nav li.dropdown:hover > .dropdown-menu-hover {
   margin-left: auto;
   margin-right: auto;
   a {
-    color: #000;
+    color: $main_font_color;
   }
   .social_icons {
     margin-top: 5px;
@@ -1050,7 +1050,7 @@ ul.nav li.dropdown:hover > .dropdown-menu-hover {
   }
   p {
     font-size: 11px;
-    color: #000;
+    color: $main_font_color;
     line-height: 26px;
     font-family: $font_family;
   }
@@ -1601,13 +1601,13 @@ ul.nav li.dropdown:hover > .dropdown-menu-hover {
 }
 
 .desc-li:hover, .desc-li-alt:hover {
-  color: #000;
+  color: $main_font_color;
   font-weight: bold;
 }
 
 .desc-li:first-child {
   font-weight: bold;
-  color: #000;
+  color: $main_font_color;
 }
 
 .desc-ul li {
@@ -2321,7 +2321,7 @@ ul.nav li.dropdown:hover > .dropdown-menu-hover {
 }
 
 .comment-author {
-  color: #000;
+  color: $main_font_color;
   font-size: 14px !important;
   font-weight: bold;
   line-height: 20px !important;
@@ -2991,7 +2991,7 @@ ul.nav li.dropdown:hover > .dropdown-menu-hover {
 .restaurant_name {
   margin-bottom: 0;
   font-size: 14px;
-  color: #000;
+  color: $main_font_color;
   line-height: 18px;
 }
 
@@ -3016,7 +3016,7 @@ ul.nav li.dropdown:hover > .dropdown-menu-hover {
 }
 
 .moved_store_name {
-  color: #000;
+  color: $main_font_color;
   font-size: 14px !important;
   line-height: 16px;
   margin-bottom: 0;
@@ -3217,7 +3217,7 @@ ul.nav li.dropdown:hover > .dropdown-menu-hover {
 }
 
 .active {
-  color: #000;
+  color: $main_font_color;
 }
 
 .promo_list {
@@ -3418,7 +3418,7 @@ ul.nav li.dropdown:hover > .dropdown-menu-hover {
     margin-bottom: 10px;
   }
   h2 {
-    color: #000;
+    color: $main_font_color;
     font-size: 16px;
     line-height: 18px;
     margin: auto;
@@ -3431,7 +3431,7 @@ ul.nav li.dropdown:hover > .dropdown-menu-hover {
   a {
     color: $primary;
     &:hover {
-      color: #000;
+      color: $main_font_color;
     }
   }
 }
@@ -3638,7 +3638,7 @@ ul.nav li.dropdown:hover > .dropdown-menu-hover {
 }
 
 h1 {
-  color: #000;
+  color: $main_font_color;
   font-size: 20px;
   line-height: 22px;
   margin: 0;
@@ -3953,7 +3953,7 @@ legend {
 
 .hours_heading {
   font-size: 24px;
-  color: #000;
+  color: $main_font_color;
   letter-spacing: 0px;
   line-height: 28px;
   margin-bottom: 10px;
@@ -3989,7 +3989,7 @@ legend {
 .form-group {
   text-align: left;
   .label {
-    color: #000;
+    color: $main_font_color;
     font-size: 16px;
     padding-left: 0;
     background: transparent;
@@ -4153,7 +4153,7 @@ legend {
     overflow: scroll;
   }
   .opened_mobile_menu {
-    color: #000;
+    color: $main_font_color;
     padding: 30px 30px;
     position: relative;
     h3 {
@@ -4189,7 +4189,7 @@ legend {
       border-top: 1px solid #000;
       padding: 10px 0;
       font-size: 24px;
-      color: #000;
+      color: $main_font_color;
       letter-spacing: 2.6px;
       line-height: 45px;
       a {
@@ -4253,15 +4253,15 @@ legend {
     }
     ::-webkit-input-placeholder {
       /* Chrome/Opera/Safari */
-      color: #000;
+      color: $main_font_color;
     }
     ::-moz-placeholder {
       /* Firefox 19+ */
-      color: #000;
+      color: $main_font_color;
     }
     :-ms-input-placeholder {
       /* IE 10+ */
-      color: #000;
+      color: $main_font_color;
     }
     .selected-tag {
       width: 100%;
